# ml_intro

./: .gitignore  LICENSE  README.md  _quarto.yml  custom.scss  index.html  pyproject.toml
.github/workflows/: quarto  quarto.yml
chapters/: 00_intro.html  00_intro.ipynb  00_probability_theory.html  00_probability_theory.ipynb  00_python.html  00_python.ipynb  01_applications_of_linear_algebra.html  01_applications_of_linear_algebra.ipynb  01_basic_concepts.html  01_basic_concepts.ipynb  01_singular_value_decomposition.html  01_singular_value_decomposition.ipynb  02_decision_trees_and_random_forest.html  02_decision_trees_and_random_forest.ipynb  02_supervised_learning.html  02_supervised_learning.ipynb  03_prerequisites_for_neural_networks.ipynb  03_stochastic_gradient_descent.html  03_stochastic_gradient_descent.ipynb  04_feedforward_neural_networks.html  04_feedforward_neural_networks.ipynb  05_convolutional_neural_networks.html  05_convolutional_neural_networks.ipynb  06_natural_language_processing.html  06_natural_language_processing.ipynb  07_transformers.html  07_transformers.ipynb  08_extra_tricks.html  08_extra_tricks.ipynb  08_recurrent_neural_networks.html  08_recurrent_neural_networks.ipynb  09_autoencoders_and_ddpm.html  09_autoencoders_and_ddpm.ipynb  09_unsupervised_learning_and_ddpm.html  09_unsupervised_learning_and_ddpm.ipynb  10_other_classical_algorithms.html  10_other_classical_algorithms.ipynb  11_recommender_systems.html  11_recommender_systems.ipynb  XX_applications_of_linear_algebra.ipynb
data/movielens/: README.md  crosstable.csv
data/names/: README.md  vardai.csv
data/planets/: README.md
data/reviewpolarity/: README.md
data/titanic/: README.md
page/: gan.html  image_transformer.html  previous_projects.html  styles.css  tagging.html
solutions/: 00.py  01.py  03.py  04.py  08.py
