[project]
name = "ml-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "Jokūbas Putrius",email = "jokubasputrius@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torch (>=2.6,<2.7)",
    "torchvision (>=0.21,<0.22)",
]

[[tool.poetry.source]]
name     = "pytorch-cpu"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cpu"

[tool.poetry.dependencies]
torch = { source = "pytorch-cpu" }
torchvision = { source = "pytorch-cpu" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

